# aiomysensors

./: .all-contributorsrc  .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASE.md  codecov.yml  example.py  pylintrc  pyproject.toml  renovate.json  requirements.txt  requirements_dev.txt  requirements_lint.txt  requirements_mypy.txt  requirements_pypi.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  draft-release.yml  labels.yml  poetry-upgrade.yml  release.yml  test.yml
aiomysensors/: __init__.py  exceptions.py  gateway.py  persistence.py  transport.py
aiomysensors/cli/: __init__.py  gateway_mqtt.py  gateway_serial.py  gateway_tcp.py  helper.py
aiomysensors/model/: const.py  message.py  node.py
aiomysensors/model/protocol/: __init__.py  protocol_14.py  protocol_15.py  protocol_20.py  protocol_21.py  protocol_22.py
aiomysensors/transport/: __init__.py  mqtt.py  serial.py  tcp.py
src/aiomysensors/: __init__.py  __main__.py  exceptions.py  gateway.py  persistence.py
src/aiomysensors/cli/: __init__.py  gateway_mqtt.py  gateway_serial.py  gateway_tcp.py  helper.py
src/aiomysensors/model/: __init__.py  const.py  message.py  node.py
src/aiomysensors/model/protocol/: __init__.py  message_handler.py  protocol_14.py  protocol_15.py  protocol_20.py  protocol_21.py  protocol_22.py
src/aiomysensors/transport/: __init__.py  mqtt.py  serial.py  tcp.py
tests/: common.py  conftest.py  test_dunder_main.py  test_gateway.py  test_persistence.py  test_sample.py
tests/cli/: conftest.py  test_gateway_mqtt.py  test_gateway_serial.py  test_gateway_tcp.py
tests/fixtures/: test_aiomysensors_persistence.json  test_pymysensors_persistence.json
tests/model/: __init__.py  test_message.py  test_node.py  test_protocol.py
tests/model/protocol/: __init__.py  conftest.py  test_init.py  test_protocol_14.py  test_protocol_20.py  test_protocol_22.py
tests/transport/: __init__.py  test_mqtt.py  test_serial.py  test_tcp.py
