[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
  {name = "Martin Hjelmare", email = "marhje52@gmail.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Home Automation",
]
description = "Python asyncio package to connect to MySensors gateways."
license = {text = "Apache-2.0"}
name = "aiomysensors"
readme = "README.md"
requires-python = ">=3.12"
version = "0.6.0"

dependencies = [
  "aiofiles>=24,<25",
  "awesomeversion>=24,<25",
  "mashumaro>=3.15",
  "pyserial-asyncio>=0.6,<1",
]
scripts.aiomysensors = "aiomysensors.cli:cli"
urls."Bug Tracker" = "https://github.com/MartinHjelmare/aiomysensors/issues"
urls.Changelog = "https://github.com/MartinHjelmare/aiomysensors/blob/main/CHANGELOG.md"
urls.repository = "https://github.com/MartinHjelmare/aiomysensors"

[project.optional-dependencies]
cli = [
  "aiomqtt>=2.3,<3",
  "typer>=0.15,<1",
]

[dependency-groups]
dev = [
  "codespell==2.4.1",
  "copier==9.6.0",
  "mypy==1.15.0",
  "pre-commit==4.1.0",
  "pytest==8.3.5",
  "pytest-asyncio==0.25.3",
  "pytest-cov==6.0.0",
  "python-semantic-release==9.21.0",
  "ruff==0.11.0",
  "types-aiofiles==24.1.0.20241221",
]

[tool.ruff]
line-length = 88
lint.ignore = [
  "COM812", # missing-trailing-comma
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "D417", # False positives in some occasions
  "EM101", # raw-string-in-exception
  "EM102", # f-string-in-exception
  "ISC001", # single-line-implicit-string-concatenation
  "PD011", # pandas-use-of-dot-values
  "PLR0913", # too-many-arguments
  "PLR2004", # magic-value-comparison
  "TC001", # typing-only-first-party-import
  "TC002", # typing-only-third-party-import
  "TC003", # typing-only-stdlib-import
  "TRY003", # raise-vanilla-args
]
lint.isort.force-sort-within-sections = true
lint.isort.known-first-party = ["aiomysensors", "tests"]
lint.per-file-ignores."setup.py" = ["D100"]
lint.per-file-ignores."tests/**/*" = [
  "FBT001", # boolean-type-hint-positional-argument
  "S101", # assert
]
lint.select = [
  "ALL", # all rules
]
target-version = "py312"

[tool.pytest.ini_options]
addopts = """\
    -Wdefault
    --cov=aiomysensors
    --cov-report=term-missing
    --cov-report=xml
    """
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "def __repr__",
  "if TYPE_CHECKING",
  "raise AssertionError",
  "raise NotImplementedError",
  "raise RuntimeError",
  'if __name__ == "__main__":',
]

[tool.mypy]
check_untyped_defs = true
#disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = [
  'setup.py',
]
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
allow_untyped_defs = true
module = "tests.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "paho",
  "paho.mqtt",
  "paho.mqtt.client",
  "serial_asyncio",
]

[tool.semantic_release]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""
major_on_zero = false
version_toml = ["pyproject.toml:project.version"]
version_variables = [
  "src/aiomysensors/__init__.py:__version__",
]

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''build\((?!deps\): .+)''',
  '''Merged? .*''',
  '''Initial [Cc]ommit.*''', # codespell:ignore
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true
