[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=77.0.3" ]

[project]
name = "aiomysensors"
version = "0.13.0"
description = "Python asyncio package to connect to MySensors gateways."
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Martin Hjelmare", email = "marhje52@gmail.com" },
]
requires-python = ">=3.13"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "awesomeversion>=25,<26",
  "mashumaro>=3.15",
  "serialx>=1.6.0",
]
optional-dependencies.cli = [
  "aiomqtt>=2.3,<3",
  "typer>=0.15,<1",
]
urls."Bug Tracker" = "https://github.com/MartinHjelmare/aiomysensors/issues"
urls.Changelog = "https://github.com/MartinHjelmare/aiomysensors/blob/main/CHANGELOG.md"
urls.repository = "https://github.com/MartinHjelmare/aiomysensors"
scripts.aiomysensors = "aiomysensors.cli:cli"

[dependency-groups]
dev = [
  "codespell==2.4.2",
  "copier==9.16.0",
  "prek==0.4.6",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "python-semantic-release>=10,<11",
  "ruff==0.15.20",
  "sybil[pytest]==10.1.0",
  "ty==0.0.55",
]

[tool.ruff]
target-version = "py313"
line-length = 88
lint.select = [
  "ALL", # all rules
]
lint.ignore = [
  "COM812",  # missing-trailing-comma
  "D203",    # 1 blank line required before class docstring
  "D213",    # Multi-line docstring summary should start at the second line
  "D417",    # False positives in some occasions
  "EM101",   # raw-string-in-exception
  "EM102",   # f-string-in-exception
  "ISC001",  # single-line-implicit-string-concatenation
  "PD011",   # pandas-use-of-dot-values
  "PLR0913", # too-many-arguments
  "PLR2004", # magic-value-comparison
  "TC001",   # typing-only-first-party-import
  "TC002",   # typing-only-third-party-import
  "TC003",   # typing-only-stdlib-import
  "TRY003",  # raise-vanilla-args
]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "FBT001", # boolean-type-hint-positional-argument
  "S101",   # assert
]
lint.isort.force-sort-within-sections = true
lint.isort.known-first-party = [ "aiomysensors", "tests" ]

[tool.pyproject-fmt]
keep_full_version = true
max_supported_python = "3.14"

[tool.ty]
terminal.error-on-warning = true

[tool.pytest]
addopts = [
  "-Wonce",
  "-p no:doctest",
  "--cov=aiomysensors",
  "--cov-report=term-missing",
  "--cov-report=xml",
]
asyncio_mode = "auto"
minversion = "9.0"
pythonpath = [ "src" ]

[tool.coverage]
run.branch = true
paths.source = [
  "src",
  ".tox/**/site-packages",
]
report.exclude_lines = [
  "@overload",
  "def __repr__",
  'if __name__ == "__main__":',
  "if TYPE_CHECKING",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
  "raise RuntimeError",
]

[tool.semantic_release]
major_on_zero = false
allow_zero_version = true
version_variables = [
  "src/aiomysensors/__init__.py:__version__",
]
version_toml = [ "pyproject.toml:project.version" ]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""
commit_parser_options.parse_squash_commits = false
branches.main.match = "main"
branches.noop.match = "(?!main$)"
branches.noop.prerelease = true
changelog.environment.keep_trailing_newline = true
changelog.exclude_commit_patterns = [
  "chore(?:\\([^)]*?\\))?: .+",
  "ci(?:\\([^)]*?\\))?: .+",
  "refactor(?:\\([^)]*?\\))?: .+",
  "style(?:\\([^)]*?\\))?: .+",
  "test(?:\\([^)]*?\\))?: .+",
  "build\\((?!deps\\): .+)",
  "Merged? .*",
  "Initial [Cc]ommit.*",         # codespell:ignore
]
